@startuml
'https://plantuml.com/class-diagram
title High level class diagram of app functionality
left to right direction
skinparam classAttributeIconSize 0

package root {
    class MainActivity
}

package maswe_storage{
    class storage_menu

    package maswe_0001{
        class MainActivity0001 <<Activity>>
    }

    package maswe_0002{
            class MainActivity0002
    }
}

' Usage
storage_menu <-- MainActivity

MainActivity0001 <-- storage_menu
MainActivity0002 <-- storage_menu


@enduml